syntax = "proto3";

package greeter;

option go_package = "github.com/devpablocristo/golang/sdk/pb;pb";

service Greeter {
    // Unary RPC
    rpc SayHelloUnary (HelloRequest) returns (HelloResponse);
    
    // Server Streaming RPC
    rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloResponse);
    
    // Client Streaming RPC
    rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloResponse);
    
    // Bidirectional Streaming RPC
    rpc SayHelloBidirectionalStreaming (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message NamesList {
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}

// protoc --go_out=../pb --go-grpc_out=../pb --go_opt=module=github.com/devpablocristo/golang/sdk/pb --go-grpc_opt=module=github.com/devpablocristo/golang/sdk/pb greet.proto